// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AiConversation > ask > should ask a question > answers 1`] = `
[
  "This is a dry run",
]
`;

exports[`AiConversation > ask > should ask a question > messages 1`] = `
[
  {
    "content": "You are a helpful assistant.",
    "role": "system",
  },
  {
    "content": "Hello",
    "role": "user",
  },
  {
    "content": "This is a dry run",
    "role": "assistant",
  },
]
`;

exports[`AiConversation > ask > should ask a question > questions 1`] = `
[
  "Hello",
]
`;

exports[`AiConversation > ask > should ask a question with custom system message > answers 1`] = `
[
  "This is a dry run",
]
`;

exports[`AiConversation > ask > should ask a question with custom system message > messages 1`] = `
[
  {
    "content": "You are a test assistant.",
    "role": "system",
  },
  {
    "content": "Hello",
    "role": "user",
  },
  {
    "content": "This is a dry run",
    "role": "assistant",
  },
]
`;

exports[`AiConversation > ask > should ask a question with custom system message > questions 1`] = `
[
  "Hello",
]
`;

exports[`AiConversation > askCode > should ask a question > answers 1`] = `
[
  "This is a dry run",
]
`;

exports[`AiConversation > askCode > should ask a question > messages 1`] = `
[
  {
    "content": "You are a helpful assistant.",
    "role": "system",
  },
  {
    "content": "Hello
ONLY CODE, NOTHING ELSE",
    "role": "user",
  },
  {
    "content": "This is a dry run",
    "role": "assistant",
  },
]
`;

exports[`AiConversation > askCode > should ask a question > questions 1`] = `
[
  "Hello
ONLY CODE, NOTHING ELSE",
]
`;

exports[`AiConversation > askCode > should ask a question with custom system message > answers 1`] = `
[
  "This is a dry run",
]
`;

exports[`AiConversation > askCode > should ask a question with custom system message > messages 1`] = `
[
  {
    "content": "You are a test assistant.",
    "role": "system",
  },
  {
    "content": "Hello
ONLY CODE, NOTHING ELSE",
    "role": "user",
  },
  {
    "content": "This is a dry run",
    "role": "assistant",
  },
]
`;

exports[`AiConversation > askCode > should ask a question with custom system message > questions 1`] = `
[
  "Hello
ONLY CODE, NOTHING ELSE",
]
`;
